manifests/wordnet-world-conductor-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: wordnet-world-conductor
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wordnet-world-conductor
    spec:
      containers:
      - image: cjblink1/wordnet-world-conductor:f247c72517340de384d963b7b22ebc6a1c57d91c
        name: wordnet-world-conductor
        ports:
        - containerPort: 8675
        resources: {}
        volumeMounts:
        - mountPath: /go/src/github.com/wordnet-world/Conductor/config/
          name: config
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: conductor-conf
status: {}
