manifests/wordnet-world-neo4j-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordnet-world-neo4j
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      containers:
        - name: neo4j
          image: 'neo4j:latest'
          ports:
            - containerPort: 7474
            - containerPort: 7687
