manifests/wordnet-world-redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordnet-world-redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: 'redis:5.0'
          ports:
            - containerPort: 6379
