manifests/wordnet-world-web-app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: wordnet-world-web-app
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wordnet-world-web-app
    spec:
      containers:
      - image: cjblink1/wordnet-world-web-app:ff734070da8dcc01e0d19c4b9d15c104338857ca
        name: wordnet-world-web-app
        ports:
        - containerPort: 80
        resources: {}
status: {}
