manifests/wordnet-world-zookeeper-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordnet-world-zookeeper
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: bitnami/zookeeper:latest
        ports:
        - containerPort: 2181
