manifests/wordnet-world-kafka-service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: wordnet-world-kafka
#  labels:
#    name: kafka
#spec:
#  ports:
#    - port: 9092
#      targetPort: 9092
#      protocol: TCP
#  selector:
#    app: kafka
#  type: ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: wordnet-world-kafka
  labels:
    name: kafka
spec:
  ports:
  - port: 9092
    targetPort: 9092
    protocol: TCP
  selector:
    app: kafka
  type: ClusterIP
