manifests/wordnet-world-neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordnet-world-neo4j
  labels:
    name: neo4j
spec:
  ports:
    - name: bolt
      port: 7687
      targetPort: 7687
      protocol: TCP
    - name: browser
      port: 7474
      targetPort: 7474
      protocol: TCP
  selector:
    app: neo4j
  type: ClusterIP
