manifests/wordnet-world-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordnet-world-redis
  labels:
    name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis
  type: ClusterIP
