manifests/wordnet-world-web-app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordnet-world-web-app
  labels:
    name: wordnet-world-web-app
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: wordnet-world-web-app
  type: ClusterIP
