manifests/wordnet-world-zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordnet-world-zookeeper
  labels:
    app: zookeeper
spec:
  ports:
  - name: client
    port: 2181
    protocol: TCP
  selector:
    app: zookeeper
  type: ClusterIP
