manifests/heapster-grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: heapster-grafana
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: grafana.wordnet.world
    http:
      paths:
      - path: /
        backend:
          serviceName: heapster-grafana
          servicePort: 80
  tls:
  - secretName: heapster-grafana-certs
