manifests/wordnet-world-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordnet-world
  namespace: default
  annotations:
    ingress.kubernetes.io/protocol: https
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: wordnet.world
    http:
      paths:
      - path: /
        backend:
          serviceName: wordnet-world-web-app
          servicePort: 80
  tls:
  - secretName: wordnet-world-certs
